Closed
Bug 94980
Opened 24 years ago
Closed 24 years ago
Keyboard navigation in context menu causes highlight upon reopening
Categories
(Core :: XUL, defect)
Core
XUL
Tracking
()
RESOLVED
FIXED
mozilla0.9.7
People
(Reporter: risto.kankkunen, Assigned: deanis74)
References
Details
Attachments
(1 file, 1 obsolete file)
826 bytes,
patch
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:0.9.3) Gecko/20010801
BuildID: 2001080110
You can have one or more menuitems appear highlighted, if you have used keyboard
to move around in a context menu first.
Reproducible: Always
Steps to Reproduce:
1. Open the context menu in browser
2. Use arrow keys to highlight a menu item
3. Press Esc to hide the context menu
4. Open the context menu again
Actual Results: The item that was highlighted before you hid the menu still is
highlighted.
Expected Results: None of the items should be highlighted.
Note: this is similar to bug 38425, although the trigger is different.
Comment 2•24 years ago
|
||
Confirming it with win98, build 2001081108
Marking as NEW and moving to XP Toolkit/Widgets: Menus
Status: UNCONFIRMED → NEW
Component: Keyboard Navigation → XP Toolkit/Widgets: Menus
Ever confirmed: true
I'll take this one. I wonder if the patch that I did at one time for 38425
(attachment 14653 [details] [diff] [review]) fixes this.
Status: NEW → ASSIGNED
Target Milestone: --- → mozilla1.0
Really taking this time.
Assignee: aaronl → dean_tessman
Status: ASSIGNED → NEW
OS: Windows NT → All
Hardware: PC → All
Updated•24 years ago
|
QA Contact: sairuh → jrgm
polish and an easy fix -->0.9.5
Target Milestone: mozilla1.0 → mozilla0.9.5
The patch I attached should fix any remaining "menu item remains highlighted on
re-open" bugs. Looking for r=/sr=.
Comment 8•24 years ago
|
||
*** Bug 103971 has been marked as a duplicate of this bug. ***
Additional comments to this bug report, from the report of bug 103971:
1. In step 2, the mouse pointer can be used in addition to the arrow keys.
2. This affects only the current window. If I have two Mozilla windows, do the
steps above on window 1, ALT+TAB to the next one (window 2) and call the context
menu, it'll appear just fine. When I return to the window 1, there's the messed
context menu.
3. This will go away when the user moves the mouse pointer (or keyboard arrow
keys) over the items.
Marcos.
Comment 10•24 years ago
|
||
0.9.5 is out the door. bumping TM up by one.
Target Milestone: mozilla0.9.5 → mozilla0.9.6
Assignee | ||
Comment 11•24 years ago
|
||
This didn't make 0.9.6. Upping milestone.
Still looking for a review on this very simple cosmetic patch...
Target Milestone: mozilla0.9.6 → mozilla0.9.7
Comment 12•24 years ago
|
||
Comment on attachment 45613 [details] [diff] [review]
why yes, yes it does
sr=blake
Attachment #45613 -
Flags: superreview+
Assignee | ||
Comment 13•24 years ago
|
||
Thanks Blake. Can someone check this in for me?
Comment 14•24 years ago
|
||
r=pink
Attachment #45613 -
Attachment is obsolete: true
Assignee | ||
Comment 15•24 years ago
|
||
New patch that works after the latest menu changes. I guess I need to get
r=/sr= again, eh? Any takers? It would be nice to get this in before it rots
again.
Assignee | ||
Comment 16•24 years ago
|
||
I really don't want to push this off another milestone. Review, please...
anyone?? The original patch was already reviewed, this latest patch is just
updated against the trunk.
Comment 17•24 years ago
|
||
You don't need re-review unless there have been substantive changes. Have there
been any?
/be
Assignee | ||
Comment 18•24 years ago
|
||
Really?! Well, no, there haven't been substantial changes, the patch is just
current with the tip.
Anyone care to check this in, then?
Assignee | ||
Comment 19•24 years ago
|
||
checked in
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Component: XP Toolkit/Widgets: Menus → XUL
QA Contact: jrgmorrison → xptoolkit.widgets
You need to log in
before you can comment on or make changes to this bug.
Description
•