Bug 94980 - Keyboard navigation in context menu causes highlight upon reopening r=pink sr=blake